@@ -3,17 +3,17 @@
 
 	<Window Type="TaharezLook/FrameWindow" Name="MainWindow">
 		<Property Name="SizingEnabled" Value="false" /> 
-		<Property Name="Position" Value="x:0.2 y:0.2" /> 
-		<Property Name="AbsoluteSize" Value="w:500 h:500" /> 
+		<Property Name="Position" Value="x:0.15 y:0.2" /> 
+		<Property Name="AbsoluteSize" Value="w:600 h:500" /> 
 		<Property Name="Alpha" Value="0.6" /> 
 		<Property Name="Text" Value="Server browser" />
 		<Window Type="DefaultGUISheet" Name="MainInnerWindow">
 			<Property Name="AbsolutePosition" Value="x:5 y:30" /> 
-			<Property Name="AbsoluteSize" Value="w:490 h:465" /> 
+			<Property Name="AbsoluteSize" Value="w:590 h:465" /> 
 			<Property Name="InheritsAlpha" Value="True" /> 
 			<Window Type="TaharezLook/MultiColumnList" Name="ServerList">
 				<Property Name="AbsolutePosition" Value="x:0 y:0" /> 
-				<Property Name="AbsoluteSize" Value="w:490 h:420" /> 
+				<Property Name="AbsoluteSize" Value="w:590 h:420" /> 
 				<Property Name="InheritsAlpha" Value="false" /> 
 				<Property Name="SelectionMode" Value="RowSingle" /> 
 			</Window>
@@ -23,13 +23,13 @@
 				<Property Name="AbsoluteSize" Value="w:150 h:25" /> 
 			</Window>
 			<Window Type="TaharezLook/Button" Name="Refresh">
-				<Property Name="AbsolutePosition" Value="x:300 y:425" /> 
+				<Property Name="AbsolutePosition" Value="x:400 y:425" /> 
 				<Property Name="AbsoluteSize" Value="w:75 h:25" /> 
 				<Property Name="Text" Value="Refresh" /> 
 				<Property Name="InheritsAlpha" Value="True" /> 
 			</Window>
 			<Window Type="TaharezLook/Button" Name="Connect">
-				<Property Name="AbsolutePosition" Value="x:380 y:425" /> 
+				<Property Name="AbsolutePosition" Value="x:480 y:425" /> 
 				<Property Name="AbsoluteSize" Value="w:75 h:25" /> 
 				<Property Name="Text" Value="Connect" /> 
 				<Property Name="InheritsAlpha" Value="True" /> 
